service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  type: NodePort #/LoadBalancer/ClusterIp by default clusterIP will be there
  ports:
  - port: 80 # service port
    targetPort: 8000 # pod/deployment/replicaSet port
