Ingress-resource.yaml
# rewrite policy ingress file 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
# add this annotation to uneble rewrite policy
# $1 is to specify only one path that is /nginx......./tomcat
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
# (/|$) refers to only / 
      - path: /nginx(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - http:
      paths:
      - path: /tomcat(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tomcat-service
            port: 
              number: 8080
